--- a/.env
+++ b/.env
@@ -1,4 +1,14 @@
-#THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/main/obsidian.css
-#THEME=https://github.com/kepano/obsidian-minimal/blob/master/obsidian.css
-#BASE_THEME=light
+THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
+BASE_THEME=light
+SITE_NAME_HEADER=Christina's TARDIS
+SITE_BASE_URL=
 dgHomeLink=true
+dgPassFrontmatter=true
+dgShowBacklinks=true
+dgShowLocalGraph=true
+dgShowInlineTitle=true
+dgShowFileTree=false
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=true
+dgShowTags=true
